--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -3,8 +3,64 @@
 nav {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	padding: 1rem;
 	background-color: $color-gray_300;
+	position: relative;
+
+	ul,
+	li {
+		all: unset;
+	}
+
+	ul {
+		display: flex;
+		flex-direction: column;
+		margin-bottom: 2rem;
+		gap: 0.5rem;
+	}
+
+	img {
+		width: 60%;
+	}
+
+	.blured-background {
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 2;
+		background-color: $color-black;
+		filter: blur(2rem);
+		width: 100dvw;
+		height: 100dvh;
+		opacity: 0.5;
+	}
+
+	.wrapper {
+		position: absolute;
+		top: 0;
+		right: 0;
+		padding: 1rem;
+		z-index: 5;
+		height: 100dvh;
+		background-color: $color-white;
+		transform: translate(100%, 0);
+		transition: transform 300ms;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+
+		> span {
+			position: absolute;
+			top: 0;
+			right: 0;
+			padding: 1rem;
+		}
+	}
+
+	.display-nav {
+		transform: translate(0, 0);
+	}
 
 	@media screen and (min-width: $breakpoint-desktop) {
 		flex-direction: column;
@@ -14,6 +70,18 @@ nav {
 
 		img {
 			margin-bottom: 2rem;
+		}
+
+		.wrapper {
+			display: block;
+			height: auto;
+			position: inherit;
+			background-color: transparent;
+			transform: translate(0, 0);
+		}
+
+		.phone-only {
+			display: none;
 		}
 	}
 }
