--- a/src/views/AdminHome/AdminHome.scss
+++ b/src/views/AdminHome/AdminHome.scss
@@ -6,6 +6,7 @@
         width: 80rem;
         flex-direction:column;
         margin-left: 20rem;
+        overflow-y:scroll;
     }
 
     .graphs-area{
