--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,22 +1,10 @@
-@import "../../styles/variables.scss";
-
 .button {
-	border-radius: $border_radius;
-	background-color: $color-white;
-	color: $color-interaction;
-	border: 1px solid $color-interaction;
+	background-color:#4C9BA0 !important;
+	color: white;
+	border: 1px solid #4C9BA0;
 	transition: all 300ms;
 	padding: 0.5rem 1rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-
-	&:hover {
-		background-color: $color-interaction;
-		color: $color-white;
-	}
-
-	&:active {
-		transform: scale(0.9);
-	}
 }
