--- a/src/views/AdminQuestion/AdminQuestion.scss
+++ b/src/views/AdminQuestion/AdminQuestion.scss
@@ -1,7 +1,37 @@
 .page-admin-question{
+    height: 100vh;
     .page-area{
         display: flex;
         flex-direction:column;
         margin-left: 20rem;
+        margin-right: 20rem;
+        padding-right: 10rem;
+        overflow-y:scroll;
+        height: 100vh;
+        width: 70vw;
+    }
+
+    p{
+        font-size: 1rem;
+    }
+
+    span{
+        color: #3EBEC6;
+    }
+
+    .questionAdmin{
+        display: flex;
+        justify-content: space-between;
+        width: 70vw;
+    }
+
+    .choices{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: .6rem;
+        margin-top: .2rem;
+        margin-bottom: .2rem;
+        background-color: #3EBEC6;
     }
 }
