--- a/src/views/Navbar/Navbar.scss
+++ b/src/views/Navbar/Navbar.scss
@@ -17,7 +17,8 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        background-color: lightgray;
+        background-color:#4C9BA0 !important;
+        color: white;
         height: 100%;
 
     }
@@ -26,10 +27,21 @@
         list-style-type: none;
         text-decoration: none;
         font-weight: bold;
-        border: .1rem solid gray;
-        background-color: gray;
+        border: .1rem solid #3EBEC6;
+        background-color: #3EBEC6;
         padding: .5rem;
         margin: .2rem;
+    }
+
+    nav ul li:hover {
+        list-style-type: none;
+        text-decoration: none;
+        font-weight: bold;
+        border: .1rem solid #3EBEC6;
+        background-color: #3EBEC6;
+        padding: .5rem;
+        margin-right: 1rem;
+        transition: 300ms;
     }
 
     .main-admin-container{
