--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,7 +1,10 @@
+@import "../../styles/variables.scss";
+
 .button {
-	background-color: #4c9ba0 !important;
-	color: white;
-	border: 1px solid #4c9ba0;
+	border-radius: $border_radius;
+	background-color: $color-white;
+	color: $color-interaction;
+	border: 1px solid $color-interaction;
 	transition: all 300ms;
 	padding: 0.5rem 1rem;
 	display: flex;
