--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -30,10 +30,10 @@ nav {
 		left: 0;
 		z-index: 2;
 		background-color: $color-black;
-		filter: blur(2rem);
 		width: 100dvw;
 		height: 100dvh;
 		opacity: 0.5;
+		transition: all 300ms;
 	}
 
 	.wrapper {
