--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,7 +14,7 @@ $color-gray_700: #333333;
 $color-gray_800: #000000;
 
 $color-interaction: rgb(44, 90, 177);
-$color-primary: rgb(255, 174, 0);
+$color-primary: rgb(76, 155, 160);
 $color-secondary: rgb(179, 255, 0);
 
 $color-error: rgb(255, 57, 57);
@@ -24,3 +24,5 @@ $breakpoint-desktop: 1120px;
 $breakpoint-tablet: 720px;
 
 $border_radius: 8px;
+
+$font-family: 'Roboto Condensed', sans-serif;
