--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -3,8 +3,8 @@
 .button {
 	border-radius: $border_radius;
 	background-color: $color-white;
-	color: $color-interaction;
-	border: 1px solid $color-interaction;
+	color: $color-primary;
+	border: 1px solid $color-white;
 	transition: all 300ms;
 	padding: 0.5rem 1rem;
 	display: flex;
@@ -13,7 +13,7 @@
 	margin-bottom: 1rem;
 
 	&:hover {
-		background-color: $color-interaction;
+		background-color: $color-primary;
 		color: $color-white;
 	}
 
