--- a/src/views/Survey/survey.scss
+++ b/src/views/Survey/survey.scss
@@ -1,9 +1,16 @@
 @import "../../styles/variables.scss";
 
 .survey {
+
 	all: unset;
+	h2{
+		display: flex;
+		justify-content: center;
+		color : $color-primary;
+	}
 
 	.carousel {
+		font-family: $font-family;
 		overflow-x: hidden;
 
 		> div {
@@ -22,9 +29,18 @@
 		flex-direction: column;
 		align-items: center;
 	}
+	
+	select {
+		padding: .8rem;
+	}
 
 	@media screen and (min-width: $breakpoint-desktop) {
 		.carousel {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			font-family: $font-family;
 			> div {
 				display: block;
 
