--- a/src/views/AdminHome/AdminHome.scss
+++ b/src/views/AdminHome/AdminHome.scss
@@ -1,14 +1,7 @@
 .page-admin-home {
-	.page-area {
-		display: flex;
-		flex-wrap: wrap;
-		flex-direction: column;
-		overflow-y: scroll;
-	}
-
 	.graphs-area {
 		display: grid;
-		grid-template-columns: repeat(2, 0.3fr);
-		grid-template-rows: repeat(2, 0.3fr);
+		grid-template-columns: repeat(auto-fit, minmax(min(400px, 100%), 1fr));
+		gap: 1rem;
 	}
 }
