Style et graphique dynamique

--- a/src/views/AdminHome/AdminHome.scss
+++ b/src/views/AdminHome/AdminHome.scss
@@ -1,4 +1,8 @@
 .page-admin-home {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	.graphs-area {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(min(400px, 100%), 1fr));
