--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -2,9 +2,9 @@
 
 .button {
 	border-radius: $border_radius;
-	background-color: $color-white;
-	color: $color-primary;
-	border: 1px solid $color-white;
+	background-color: $color-primary;
+	color: $color-white;
+	border: 1px solid $color-primary;
 	transition: all 300ms;
 	padding: 0.5rem 1rem;
 	display: flex;
@@ -13,8 +13,8 @@
 	margin-bottom: 1rem;
 
 	&:hover {
-		background-color: $color-primary;
-		color: $color-white;
+		background-color: $color-white;
+		color: $color-primary;
 	}
 
 	&:active {
